[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/bosses/gabyaoll.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/bosses/gabyoall/gabyoall.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/bosses/gabyoall/elec.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/bosses/gabyoall/elec-spark.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 3.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 91 )

[sub_resource type="Animation" id=4]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
length = 0.16
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=8]
length = 0.32
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=9]
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/elec/elec:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/elec/spark:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/elec/spark:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[node name="gabyaoll" type="KinematicBody2D" groups=[
"enemies",
"gabyoall",
]]
pause_mode = 1
collision_layer = 66
collision_mask = 0
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 11
frame = 4

[node name="elec" type="Control" parent="sprite"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="elec" type="Sprite" parent="sprite/elec"]
position = Vector2( 0, -92 )
texture = ExtResource( 3 )
hframes = 2

[node name="spark" type="Sprite" parent="sprite/elec"]
position = Vector2( 0, -184 )
texture = ExtResource( 4 )
hframes = 2

[node name="coll_box" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 4

[node name="box" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 3.5 )
shape = SubResource( 2 )

[node name="beam_box" type="Area2D" parent="."]
collision_layer = 33
collision_mask = 4

[node name="beam" type="CollisionShape2D" parent="beam_box"]
position = Vector2( 0, -92 )
shape = SubResource( 3 )
disabled = true

[node name="anim_a" type="AnimationPlayer" parent="."]
anims/fire-2 = SubResource( 4 )
anims/idle-0 = SubResource( 5 )
anims/idle-1 = SubResource( 6 )
anims/idle-2 = SubResource( 7 )
anims/warning-1 = SubResource( 8 )

[node name="anim_b" type="AnimationPlayer" parent="."]
anims/elec = SubResource( 9 )
[connection signal="animation_finished" from="anim_a" to="." method="_on_anim_a_finished"]
